--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
 
   <body>
     <!-- write the body here -->
-	<form onsubmit="formValidation(event)">
+
 		<input type="number" id="age" placeholder="age">
 		<input type="text" id="name" placeholder="name">
-		<button type="submit" id="btn">submit</button>
-	</form>
+		<button type="submit" id="btn" onclick="formValidation(event)">submit</button>
+
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
