--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
   <body>
     <!-- write the body here -->
 
-		<input type="number" id="age" placeholder="age">
-		<input type="text" id="name" placeholder="name">
+		<input type="number" name="age" id="age" placeholder="age">
+		<input type="text" name="name" id="name" placeholder="name">
 		<button type="submit" id="btn" onclick="formValidation(event)">submit</button>
 
     <script type="text/javascript" src="./script.js"></script>
