--- a/main.html
+++ b/main.html
@@ -7,10 +7,12 @@
 
   <body>
     <!-- write the body here -->
+		<form onsubmit="formValidation(event)">
+			<input type="number" name="age" id="age" placeholder="age">
+			<input type="text" name="name" id="name" placeholder="name">
+			<button type="submit" id="btn">submit</button>
+		</form>
 
-		<input type="number" name="age" id="age" placeholder="age">
-		<input type="text" name="name" id="name" placeholder="name">
-		<button type="submit" id="btn" onclick="formValidation(event)">submit</button>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
